--- a/io.html
+++ b/io.html
@@ -37,14 +37,14 @@
 
 <a href="acestream://162942adc047d0f78eac056effbe5bbec54a5e51" style="text-decoration:none">DAZN</a><br>
 <a href="acestream://897e73c9d578848f596585314ecb9ae067c0e229" style="text-decoration:none">DAZN 1 Bar HD [DE]</a><br>
-<a href="acestream://7aa402bab9fff43258fbcf401881a39475f30aaf" style="text-decoration:none">DAZN 2 (dial 71)</a><br>
-<a href="acestream://60dbeeb299ec04bf02bc7426d827547599d3d9fc" style="text-decoration:none">DAZN 2 (dial 71)</a><br>
+<a href="acestream://7aa402bab9fff43258fbcf401881a39475f30aaf" style="text-decoration:none">DAZN 2</a><br>
+<a href="acestream://60dbeeb299ec04bf02bc7426d827547599d3d9fc" style="text-decoration:none">DAZN 2</a><br>
 <a href="acestream://12ea555d431dbe51fc8e4ca745aec09fe22a4865" style="text-decoration:none">DAZN 2 BAR HD [DE]</a><br>
-<a href="acestream://a8ffddef56f082d4bb5c0be0d3d2fdd8c16dbd97" style="text-decoration:none">DAZN 3 (dial 196)</a><br>
-<a href="acestream://2fcdf7a19c0858f686efdfabd3c8c2b92bf6bcfd" style="text-decoration:none">DAZN 4 (dial 197)</a><br>
-<a href="acestream://5789ca155323664edd293b848606688edf803f4d" style="text-decoration:none">DAZN F1 (dial 69)</a><br>
-<a href="acestream://9dad717d99b29a05672166258a77c25b57713dd5" style="text-decoration:none">DAZN F1 (dial 69)</a><br>
-<a href="acestream://e1fcad9de0c782c157fde6377805c58297ab65c2" style="text-decoration:none">DAZN F1 (dial 69)</a><br>
+<a href="acestream://a8ffddef56f082d4bb5c0be0d3d2fdd8c16dbd97" style="text-decoration:none">DAZN 3</a><br>
+<a href="acestream://2fcdf7a19c0858f686efdfabd3c8c2b92bf6bcfd" style="text-decoration:none">DAZN 4</a><br>
+<a href="acestream://5789ca155323664edd293b848606688edf803f4d" style="text-decoration:none">DAZN F1</a><br>
+<a href="acestream://9dad717d99b29a05672166258a77c25b57713dd5" style="text-decoration:none">DAZN F1</a><br>
+<a href="acestream://e1fcad9de0c782c157fde6377805c58297ab65c2" style="text-decoration:none">DAZN F1</a><br>
 <a href="acestream://aa82e7d4f03061f2144a2f4be22f2e2210d42280" style="text-decoration:none">DAZN Laliga</a><br>
 <a href="acestream://8c6a3a49e43b6d05ac93b83fe4a41660caffae01" style="text-decoration:none">DEIMA SPORT<br><br>
 
@@ -85,33 +85,32 @@
 <a href="acestream://822654b2c0db24d1de149cb21fdd44a3b968fbfa" style="text-decoration:none">Match Боец [RU]</a><br>
 <a href="acestream://a203f6b935a8ad8659c4c76c1d9c13afa6368ef2" style="text-decoration:none">Match ТВ HD [RU]</a><br>
 
-<a href="acestream://d00223931b1854163e24c5c22475015d7d45c112" style="text-decoration:none">M+ Deportes	(dial 63)</a><br>
-<a href="acestream://e5fa927d9a017f4523fdb62774a0aec457985bfa" style="text-decoration:none">M+ Deportes (dial 63)</a><br>
-<a href="acestream://80e9f2283f831a554c68824db25bb85a0004bb9b" style="text-decoration:none">M+ Deportes	(dial 63)</a><br>
-<a href="acestream://e6f06d697f66a8fa606c4d61236c24b0d604d917" style="text-decoration:none">M+ Deportes 2 (dial 64)</a><br>
-<a href="acestream://8587ed8ac36ac477e1d4176d3159a38bd154d4ce" style="text-decoration:none">M+ Deportes 6 (dial 193)</a><br>
-<a href="acestream://aee0a595220e0f1c2fee725fd1dbc602d7152a9a" style="text-decoration:none">M+ Deportes 6 (dial 193)</a><br>
+<a href="acestream://d00223931b1854163e24c5c22475015d7d45c112" style="text-decoration:none">M+ Deportes</a><br>
+<a href="acestream://e5fa927d9a017f4523fdb62774a0aec457985bfa" style="text-decoration:none">M+ Deportes</a><br>
+<a href="acestream://80e9f2283f831a554c68824db25bb85a0004bb9b" style="text-decoration:none">M+ Deportes</a><br>
+<a href="acestream://e6f06d697f66a8fa606c4d61236c24b0d604d917" style="text-decoration:none">M+ Deportes 2</a><br>
+<a href="acestream://8587ed8ac36ac477e1d4176d3159a38bd154d4ce" style="text-decoration:none">M+ Deportes 6</a><br>
+<a href="acestream://aee0a595220e0f1c2fee725fd1dbc602d7152a9a" style="text-decoration:none">M+ Deportes 6</a><br>
 
 <a href="acestream://67654e63b5065cdaa6c8e8d41bb5428b42b32830" style="text-decoration:none">M+ Ellas Vamos</a></br>
-<a href="acestream://4f945b0ba4206fa2676b61e9eaa465ac3dcc8122" style="text-decoration:none">M+ Golf	(dial 67)</a><br>
-<a href="acestream://9a4f3ae6563668b7709dac509dedc709441b3fd9" style="text-decoration:none">M+ Golf 2 (dial 68)</a><br>
-<a href="acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f" style="text-decoration:none">M+ LaLiga TV (dial 54)</a><br>
-<a href="acestream://f031f5728b32f6089dda28edebe990cf198108d8" style="text-decoration:none">M+ LaLiga TV (dial 54)</a><br>
-<a href="acestream://1969c27658d4c8333ab2c0670802546121a774a5" style="text-decoration:none">M+ LaLiga TV (dial 54)</a><br>
-<a href="acestream://80126b240f3e4e004754fd8f8103e857ab2556a0" style="text-decoration:none">M+ Laliga TV 2 (dial 57)</a><br>
-<a href="acestream://26029f72a4ca831d09deefe89534818db1d105bc" style="text-decoration:none">M+ Laliga TV 2 (dial 57)</a><br>
-<a href="acestream://4c46585214b23b1d802ef2168060c7649a3894cf" style="text-decoration:none">M+ LaLiga TV Hypermotion (dial 56)</a><br>
-<a href="acestream://06b367c22394a1358c9cefa0cb5d0b64b9b2b3f4" style="text-decoration:none">M+ LaLiga TV Hypermotion (dial 56)</a><br>
-<a href="acestream://2709d0ab86cb6ce7ba4d3ad188d7fa80668f2924" style="text-decoration:none">M+ Laliga TV 2 Hypermotion (dial 59)</a><br>
-<a href="acestream://d81b4f2f3fde433539c097b2edc9b587ca47b087" style="text-decoration:none">M+ Laliga TV 2 Hypermotion (dial 59)</a><br>
-<a href="acestream://931b1984badcb821df7b47a66ac0835ac871b51c" style="text-decoration:none">M+ Liga de Campeones (dial 60)</a><br>
-<a href="acestream://e2e2aca792aae5da19995ac516b1d620531bd49c" style="text-decoration:none">M+ Liga de Campeones (dial 60)</a><br>
-
-<a href="acestream://6753492c1908274c268a1b28e2a054a0ff8f86f9" style="text-decoration:none">M+ Liga de Campeones 2 (dial 57)</a><br>
-<a href="acestream://fc2fe31b0bce25e2dc7ab4d262bf645e2be5a393" style="text-decoration:none">M+ Liga de Campeones 2 (dial 57)</a><br>
-<a href="acestream://ad372cba73aa0ece207a79532b3e30b731136bb2" style="text-decoration:none">M+ Liga de Campeones 3 (dial 62)</a><br>
-<a href="acestream://859bb6295b8d0f224224d3063d9db7cdeca03122" style="text-decoration:none">M+ Vamos (dial 8)</a><br>
-<a href="acestream://3bba7c95857c2502c7e03ced1a6a9b00eb567fa0" style="text-decoration:none">M+ Vamos (dial 8)</a><br>
+<a href="acestream://4f945b0ba4206fa2676b61e9eaa465ac3dcc8122" style="text-decoration:none">M+ Golf</a><br>
+<a href="acestream://9a4f3ae6563668b7709dac509dedc709441b3fd9" style="text-decoration:none">M+ Golf 2</a><br>
+<a href="acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f" style="text-decoration:none">M+ LaLiga TV</a><br>
+<a href="acestream://f031f5728b32f6089dda28edebe990cf198108d8" style="text-decoration:none">M+ LaLiga TV</a><br>
+<a href="acestream://1969c27658d4c8333ab2c0670802546121a774a5" style="text-decoration:none">M+ LaLiga TV</a><br>
+<a href="acestream://80126b240f3e4e004754fd8f8103e857ab2556a0" style="text-decoration:none">M+ Laliga TV 2</a><br>
+<a href="acestream://26029f72a4ca831d09deefe89534818db1d105bc" style="text-decoration:none">M+ Laliga TV 2</a><br>
+<a href="acestream://4c46585214b23b1d802ef2168060c7649a3894cf" style="text-decoration:none">M+ LaLiga TV Hypermotion</a><br>
+<a href="acestream://06b367c22394a1358c9cefa0cb5d0b64b9b2b3f4" style="text-decoration:none">M+ LaLiga TV Hypermotion</a><br>
+<a href="acestream://2709d0ab86cb6ce7ba4d3ad188d7fa80668f2924" style="text-decoration:none">M+ Laliga TV 2 Hypermotion</a><br>
+<a href="acestream://d81b4f2f3fde433539c097b2edc9b587ca47b087" style="text-decoration:none">M+ Laliga TV 2 Hypermotion</a><br>
+<a href="acestream://931b1984badcb821df7b47a66ac0835ac871b51c" style="text-decoration:none">M+ Liga de Campeones</a><br>
+<a href="acestream://e2e2aca792aae5da19995ac516b1d620531bd49c" style="text-decoration:none">M+ Liga de Campeones</a><br>
+<a href="acestream://6753492c1908274c268a1b28e2a054a0ff8f86f9" style="text-decoration:none">M+ Liga de Campeones 2</a><br>
+<a href="acestream://fc2fe31b0bce25e2dc7ab4d262bf645e2be5a393" style="text-decoration:none">M+ Liga de Campeones 2</a><br>
+<a href="acestream://ad372cba73aa0ece207a79532b3e30b731136bb2" style="text-decoration:none">M+ Liga de Campeones 3</a><br>
+<a href="acestream://859bb6295b8d0f224224d3063d9db7cdeca03122" style="text-decoration:none">M+ Vamos</a><br>
+<a href="acestream://3bba7c95857c2502c7e03ced1a6a9b00eb567fa0" style="text-decoration:none">M+ Vamos</a><br>
 
 <a href="acestream://ed3c01f29c435b67b120245de556b0642538f1de" style="text-decoration:none">M+</a><br>
 <a href="acestream://3e31cebb2c9678dfdbb2bf1fff298c4b0b2eee2d" style="text-decoration:none">M+</a><br>
@@ -152,18 +151,18 @@
 
 <br><i>En Revisión:</i><br><br>
 <a href="acestream://e454681a152a86da504e63694f17f90d0586867d" style="text-decoration:none">DAZN</a><br>
-<a href="acestream://75251ba975132ec9a202806ba5bf606e87280c96" style="text-decoration:none">DAZN Liga (dial 55)</a><br>
+<a href="acestream://75251ba975132ec9a202806ba5bf606e87280c96" style="text-decoration:none">DAZN Liga</a><br>
 <a href="acestream://a3bca895c58d3fc7d5e4259d3d5e3cf0291d1914" style="text-decoration:none">DAZN Laliga</a><br>
 <a href="acestream://1960a9be8ae9e8c755330218eac4c5805466290a" style="text-decoration:none">DAZN Laliga</a><br>
-<a href="acestream://8ca07071b39185431f8e940ec98d1add9e561639" style="text-decoration:none">DAZN 1 (dial 70)</a><br>
-<a href="acestream://eaff9293c76a324c750ef5094c2a4e2c96518d1f" style="text-decoration:none">DAZN 1 (dial 70)</a><br>
+<a href="acestream://8ca07071b39185431f8e940ec98d1add9e561639" style="text-decoration:none">DAZN 1</a><br>
+<a href="acestream://eaff9293c76a324c750ef5094c2a4e2c96518d1f" style="text-decoration:none">DAZN 1</a><br>
 <a href="acestream://2ce71f25114cf5fbf04816bcb1be980fb6676064" style="text-decoration:none">Formula F1 TV pro 1080p</a></br>
 <a href="acestream://63ab9528b16e536be0da44d6f5aceac357292b95" style="text-decoration:none">Fox Sports Laliga</a></br>
-<a href="acestream://5a8d60f4c8e558f8ae5acad7c75f455928ce0c2e" style="text-decoration:none">Gol Mundial</a></br>
-<a href="acestream://78384a676407784df944243eb2f75d937fbcc253" style="text-decoration:none">Gol Mundial</a></br>
-<a href="acestream://4af5952b95d3c2e99fcdc0de2f528d3fcd73e06b" style="text-decoration:none">Gol Mundial</a></br>
-<a href="acestream://52c8ff01836c294caad8b8c029b53360aa16a4cd" style="text-decoration:none">Gol Mundial</a></br>
-<a href="acestream://d6d5775a2965b15ee405278b6a2e5a4374a80e25" style="text-decoration:none">Gol Mundial</a></br>
+<a href="acestream://5a8d60f4c8e558f8ae5acad7c75f455928ce0c2e" style="text-decoration:none">Gol Mun</a></br>
+<a href="acestream://78384a676407784df944243eb2f75d937fbcc253" style="text-decoration:none">Gol Mun</a></br>
+<a href="acestream://4af5952b95d3c2e99fcdc0de2f528d3fcd73e06b" style="text-decoration:none">Gol Mun</a></br>
+<a href="acestream://52c8ff01836c294caad8b8c029b53360aa16a4cd" style="text-decoration:none">Gol Mun</a></br>
+<a href="acestream://d6d5775a2965b15ee405278b6a2e5a4374a80e25" style="text-decoration:none">Gol Mun</a></br>
 <a href="acestream://60106275d34f995e26bb2cc4a21a42f586c6c555" style="text-decoration:none">La 2 TVE</a><br>
 <a href="acestream://37d42d2b5d2278e6bb5810329a5f220867b3cf0c" style="text-decoration:none">M+ La Liga</a><br>
 <a href="acestream://7c12288663069a12aff58f3f62e8ea47ab78c65d" style="text-decoration:none">Sky Sports 1 HD [DE]</a><br>
